--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<druid.version>1.0.7</druid.version>
 		<jdbc.mysql.version>5.1.31</jdbc.mysql.version>
 		<jdbc.hsqldb.version></jdbc.hsqldb.version>
-		
+
 		<fastjson.version>1.1.41</fastjson.version>
 	</properties>
 
@@ -66,5 +66,16 @@
 	</dependencies>
 	<build>
 		<finalName>interview</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
