--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
 		<filter-class>org.nutz.mvc.NutFilter</filter-class>
 		<init-param>
 			<param-name>modules</param-name>
-			<param-value>com.ztesoft.zsmart.interview.MainModule</param-value>
+			<param-value>com.ztesoft.zsmart.MainModule</param-value>
 		</init-param>
 	</filter>
 
