--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,12 @@
 			<artifactId>nutz</artifactId>
 			<version>${nutz.version}</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.sitemesh</groupId>
+			<artifactId>sitemesh</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.alibaba</groupId>
